--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,79 @@
 
 
 
+/* Create four equal columns that sits next to each other */
+.row-gallery  {
+	display: -ms-flexbox; /* IE10 */
+	display: flex;
+	-ms-flex-wrap: wrap; /* IE10 */
+	flex-wrap: wrap;
+	padding: 0 4px;
+  }
+  
+.column-gallery {
+	flex: 25%;
+	max-width: 25%;
+	padding: 0 4px;
+  }
+  
+  .column-gallery img {
+	margin-top: 8px;
+	vertical-align: middle;
+	width: 100%;
+  }
+  
+  /* Responsive layout - makes a two column-layout instead of four columns */
+  @media screen and (max-width: 800px) {
+	.column-gallery {
+	  flex: 50%;
+	  max-width: 50%;
+	}
+  }
+  
+  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+  @media screen and (max-width: 600px) {
+	.column-gallery {
+	  flex: 100%;
+	  max-width: 100%;
+	}
+  }
+  .hovereffect .overlay {
+	width:100%;
+	height:100%;
+	position:absolute;
+	overflow:hidden;
+	top:0;
+	left:0;
+	opacity:0;
+	background-color:rgba(0,0,0,0.5);
+	-webkit-transition:all .4s ease-in-out;
+	transition:all .4s ease-in-out
+	}
+	
+  .hovereffect img {
+	display:block;
+	position:relative;
+	-webkit-transition:all .4s linear;
+	transition:all .4s linear;
+	}
+  .hovereffect { 
+	
+	overflow:hidden;
+	position:relative;
+	text-align:center;
+	cursor:default;
+	}
+	.hovereffect:hover img {
+	  -ms-transform:scale(1.2);
+	  -webkit-transform:scale(1.2);
+	   transform:scale(1.2);
+	   opacity:0.6;
+  }
+  .hovereffect:hover .overlay {
+		opacity:0.6;
+		filter:alpha(opacity=100);
+   }
+	  
 
 /*Preloader*/
 #loader {
