--- a/css/main.css
+++ b/css/main.css
@@ -96,7 +96,32 @@
 		filter:alpha(opacity=100);
    }
 	  
+   .album-cat.nav{
+	margin: 0 auto;
+    position: static;
+    width: 45%;
+	background: #ffffff;
+    border-radius: 3px;
+	-moz-border-radius:3px;
+	-webkit-border-radius :3px;
+	-ms-border-radius:3px;
+	-o-border-radius:3px;
+    height: auto;
+	padding: 6px 0;
+	text-align:center;
+}
 
+.album-cat.nav li a.active {
+    color:#181818;
+}
+.album-cat.nav li{
+	display:inline-block;
+	margin:0 8px;
+}
+
+.gray{
+	background-color: #f1f1f1
+}
 /*
 *	SELFIE (HTML version)
 * 	Copyright 2015
@@ -187,7 +212,7 @@ header.header{
 
 .main-nav .logo {
     bottom: 7px;
-    max-width: 80px;
+    max-width: 150px;
     position: relative;
 	margin-top:25px;
 }
@@ -505,6 +530,7 @@ nav ul.menu ul ul {
 
 .hero .content-inner{
 	position:relative;
+	text-align: justify;
 }
 
 
